merzigo-case/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-demo
spec:
  selector:
    app: demo-java-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
